--- a/DiveLogExporter/DiveLogExporter/DiveLogExporter.csproj
+++ b/DiveLogExporter/DiveLogExporter/DiveLogExporter.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5771D539-B568-4FE6-AC34-6D21C1F6800A}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ShearwaterDiveLogExporter</RootNamespace>
-    <AssemblyName>ShearwaterDiveLogExporter</AssemblyName>
+    <RootNamespace>DiveLogExporter</RootNamespace>
+    <AssemblyName>DiveLogExporter</AssemblyName>
     <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
