--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,6 @@ concurrency:
 jobs:
   build:
     runs-on: windows-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -51,7 +50,11 @@ jobs:
         with:
           name: DiveLogExporter
           path: DiveLogExporter/DiveLogExporter/bin/Release/
-      
+  
+  trigger:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Trigger action dive-logs-deployment
         run: |
           curl -L \
